--- a/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_2019.Rnw
+++ b/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_2019.Rnw
@@ -66,9 +66,9 @@
 
 %\additionalinfo{Supersedes ERDC/CREL AF-01-23}
 
-\begin{abstract}
-  \lipsum[12-13]
-\end{abstract}
+%\begin{abstract}
+%  \lipsum[12-13]
+%\end{abstract}
 
 \disclaimer{
 	
