--- a/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_c08_2019.Rnw
+++ b/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_c08_2019.Rnw
@@ -11,4 +11,5 @@
 \chapter{Aula 8 - Encerramento do Curso}
 
 
-Aqui colocamos as coisas que precisa lembrar e algumas ideias sobre o que pode fazer
+Aqui colocamos as coisas que precisa lembrar e algumas idéias sobre o que pode fazer
+
