--- a/curso_intro_datascience/Apostilas/UFPA_Curso_TecComp_00_2019-knitr.Rnw
+++ b/curso_intro_datascience/Apostilas/UFPA_Curso_TecComp_00_2019-knitr.Rnw
@@ -1,15 +1,15 @@
-\documentclass[12pt,a4paper,oneside]{erdc}
+\documentclass[12pt,a4paper,oneside]{erdcUfpa}
 %\documentclass{erdc}
 \usepackage[T1]{fontenc}		% Selecao de codigos de fonte.
-\usepackage[utf8]{inputenc}		% Codificacao do documento (conversÃ£o automÃ¡tica dos acentos)
-%\usepackage{lastpage}			% Usado pela Ficha catalogrÃ¡fica
-\usepackage{indentfirst}		% Indenta o primeiro parÃ¡grafo de cada seÃ§Ã£o.
+\usepackage[utf8]{inputenc}		% Codificacao do documento (conversão automática dos acentos)
+%\usepackage{lastpage}			% Usado pela Ficha catalográfica
+\usepackage{indentfirst}		% Indenta o primeiro parágrafo de cada seção.
 \usepackage{color}				% Controle das cores
-\usepackage{graphicx}			% InclusÃ£o de grÃ¡ficos
-%\usepackage{microtype} 			% para melhorias de justificaÃ§Ã£o
+\usepackage{graphicx}			% Inclusão de gráficos
+%\usepackage{microtype} 			% para melhorias de justificação
 \usepackage[brazil]{babel}
-%\usepackage[brazilian,hyperpageref]{backref}	 % Paginas com as citaÃ§Ãµes na bibl
-%\usepackage[alf]{abntex2cite}	% CitaÃ§Ãµes padrÃ£o ABNT
+%\usepackage[brazilian,hyperpageref]{backref}	 % Paginas com as citações na bibl
+%\usepackage[alf]{abntex2cite}	% Citações padrão ABNT
 \usepackage{hyperref}
 \usepackage{natbib}
 
@@ -17,17 +17,24 @@
 
 
 \begin{document}
-\SweaveOpts{concordance=TRUE, echo=FALSE, eval=TRUE}
+
+<<include=FALSE>>=
+library(knitr)
+opts_chunk$set(
+concordance=TRUE, echo=FALSE, eval=TRUE
+)
+@
+
 
 \frontmatter
 
-\laboratory{PPGE-UFPA}
+\laboratory{Ecos\_S}
 
-\reportnum{BP/EcoS - Curso-DataScience-00-2019}
+\reportnum{Curso-DataScience-00-2019}
 
-\program{ConstruÃ§Ã£o de Modelos e Indicadores EconÃ´micos}
+\program{Graduação e Pós-Graduação em Economia}
 
-\title{IntroduÃ§Ã£o ao Tratamento e AnÃ¡lise de Dados em R}
+\title{Introdução ao Tratamento e Análise de Dados em R}
 
 %\subtitle{Assessments and Report from Socioeconomic and Demographic Data in \\
 %	      Small Cities in Amazon Delta}
@@ -38,27 +45,27 @@
 
 \author{S.~Rivero \and H.~Farias}
 
-\affiliation{Programa de PÃ³s-GraduaÃ§Ã£o em Economia\\
-  Instituto de CiÃªncias Sociais Aplicadas\\
-  Universidade Federal do ParÃ¡\\
+\affiliation{Programa de Pós-Graduação em Economia\\
+  Instituto de Ciências Sociais Aplicadas\\
+  Universidade Federal do Pará\\
   Rua Augusto Correia, 1\\
-  BelÃ©m, ParÃ¡ - 66.075-200}
+  Belém, Pará - 66.075-200}
 
 \author{Equipe UFPA }
 
 
 \affiliation{Faculdade de Economia \\
-	Instituto de CiÃªncias Sociais Aplicadas\\
-	Universidade Federal do ParÃ¡\\
+	Instituto de Ciências Sociais Aplicadas\\
+	Universidade Federal do Pará\\
 	Rua Augusto Correia, 1\\
-	BelÃ©m, ParÃ¡ - 66.075-200}
+	Belém, Pará - 66.075-200}
 
 
 \coverart[width=\linewidth]{../figs/Capa}
 
-\reporttype{Produto: Cursos}
-
-\distribution{Propriedade BANPARÃ e PPGE-UFPA \\ (DistribuiÃ§Ã£o Restrita)}
+%\reporttype{Produto: Cursos}
+%
+%\distribution{Propriedade BANPARÁ e PPGE-UFPA \\ (Distribuição Restrita)}
 
 % \distribution{Distribution authorized to U.S. Government Agencies
 % only; Test and Evaluation; November 2005.  Other requests should be
@@ -66,29 +73,27 @@
 
 %\additionalinfo{Supersedes ERDC/CREL AF-01-23}
 
-\begin{abstract}
-  \lipsum[12-13]
-\end{abstract}
+%\begin{abstract}
+%  \lipsum[12-13]
+%\end{abstract}
 
 \disclaimer{
 	
-	This document is an output from the Â BanparÃ¡ Project 
+
+	Notas de Aula
 	
-	PPGE-UFPA report
-	
-	Distribution Restrictions
-	
+	Curso Ferramentas Computacionais	
 	\copyright 2019, All rights reserved
 	
 	\pagebreak
 	
 	}
 
-\preparedfor{BanparÃ¡} 
+\preparedfor{UFPA} 
 
-\contractnum{FADESP-NO-CONTRATO}
+\contractnum{2-2019}
 
-\monitoredby{BanparÃ¡}
+%\monitoredby{Banpará}
 
 %\preparedfor{}
 
@@ -115,7 +120,10 @@ library(knitr)
 @
 
 
-\SweaveInput{BP_Curso_TecComp_00_intro_2019.Rnw}
+
+<<'child-BP_Curso_TecComp_00_intro_2019.Rnw', child='BP_Curso_TecComp_00_intro_2019.Rnw'>>=
+@
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -123,7 +131,10 @@ library(knitr)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\SweaveInput{BP_Curso_TecComp_01_c01_2019.Rnw}
+
+<<'child-BP_Curso_TecComp_00_c01_2019.Rnw', child='BP_Curso_TecComp_00_c01_2019.Rnw'>>=
+@
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -131,7 +142,10 @@ library(knitr)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\SweaveInput{BP_Curso_TecComp_01_c02_2019.Rnw}
+
+<<'child-BP_Curso_TecComp_00_c02_2019.Rnw', child='BP_Curso_TecComp_00_c02_2019.Rnw'>>=
+@
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -139,7 +153,10 @@ library(knitr)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\SweaveInput{BP_Curso_TecComp_00_c03_2019.Rnw}
+
+<<'child-BP_Curso_TecComp_00_c03_2019.Rnw', child='BP_Curso_TecComp_00_c03_2019.Rnw'>>=
+@
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -147,7 +164,10 @@ library(knitr)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\SweaveInput{BP_Curso_TecComp_00_c04_2019.Rnw}
+
+<<'child-BP_Curso_TecComp_00_c04_2019.Rnw', child='BP_Curso_TecComp_00_c04_2019.Rnw'>>=
+@
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -155,7 +175,10 @@ library(knitr)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\SweaveInput{BP_Curso_TecComp_00_c05_2019.Rnw}
+
+<<'child-BP_Curso_TecComp_00_c05_2019.Rnw', child='BP_Curso_TecComp_00_c05_2019.Rnw'>>=
+@
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -163,7 +186,10 @@ library(knitr)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\SweaveInput{BP_Curso_TecComp_00_c06_2019.Rnw}
+
+<<'child-BP_Curso_TecComp_00_c06_2019.Rnw', child='BP_Curso_TecComp_00_c06_2019.Rnw'>>=
+@
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -171,7 +197,10 @@ library(knitr)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\SweaveInput{BP_Curso_TecComp_00_c07_2019.Rnw}
+
+<<'child-BP_Curso_TecComp_00_c07_2019.Rnw', child='BP_Curso_TecComp_00_c07_2019.Rnw'>>=
+@
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -179,7 +208,10 @@ library(knitr)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\SweaveInput{BP_Curso_TecComp_00_c08_2019.Rnw}
+
+<<'child-BP_Curso_TecComp_00_c08_2019.Rnw', child='BP_Curso_TecComp_00_c08_2019.Rnw'>>=
+@
+
 
 \chapter{Onde aprender mais?}
 \addcontentsline{toc}{section}{Onde aprender mais?}
@@ -192,7 +224,7 @@ library(knitr)
 
 %\appendix
 
-%\chapter{Tabelas demogrÃ¡ficas}
+%\chapter{Tabelas demográficas}
 
 %\lipsum[12-16]
 
