--- a/curso_intro_datascience/bib/bibliografia.bib
+++ b/curso_intro_datascience/bib/bibliografia.bib
@@ -97,4 +97,44 @@
   timestamp = {2019.02.27},
 }
 
+@Article{Wickham2014,
+  author     = {Hadley Wickham},
+  title      = {Tidy data},
+  journal    = {The Journal of Statistical Software},
+  year       = {2014},
+  volume     = {59},
+  issue      = {10},
+  url        = {http://www.jstatsoft.org/v59/i10/},
+  bdsk-url-1 = {http://www.jstatsoft.org/v59/i10/},
+  file       = {:software/R/v59i10.pdf:PDF},
+  owner      = {rivero},
+  selected   = {TRUE},
+  timestamp  = {2019.03.20},
+}
+
+@TechReport{Zimmermann2006,
+  author      = {Niklaus E Zimmermann and Katharina Steinmann},
+  title       = {A short Introduction to statistics using R},
+  institution = {CRAN},
+  year        = {2006},
+  file        = {:software/R/A_short_Introduction_to_statistics_using_R.pdf:PDF},
+  owner       = {rivero},
+  timestamp   = {2019.03.20},
+}
+
+@Article{Faherty1985,
+  author    = {Vincent Edward Faherty},
+  title     = {First Steps First},
+  journal   = {Health Marketing Quarterly},
+  year      = {1985},
+  volume    = {2},
+  number    = {4},
+  month     = {jun},
+  pages     = {25--33},
+  doi       = {10.1300/j026v02n04_05},
+  owner     = {rivero},
+  publisher = {Informa {UK} Limited},
+  timestamp = {2019.03.20},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
